<resources>
    <string name="app_name">Get Taxi</string>
    <string name="title_activity_main">Get Taxi</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">ID Number</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="basic_details">Basic Details</string>
    <string name="ride_details">Ride Details</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="ride_time">Ride Time</string>
    <string name="comments">Comments</string>
    <string name="ride_date">Ride Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="searching">Searching..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
