<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".controller.OrderActivity">

        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleRideDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ride_details"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        style="@style/TaxiTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rideDate"
                            style="@style/TaxiTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:cursorVisible="false"
                            android:drawableStart="@drawable/ic_baseline_date_range_24px"
                            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24px"
                            android:focusable="false"
                            android:hint="@string/ride_date"
                            android:longClickable="false"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/TaxiTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rideTime"
                            style="@style/TaxiTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:cursorVisible="false"
                            android:drawableStart="@drawable/ic_baseline_access_time_24px"
                            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24px"
                            android:focusable="false"
                            android:hint="@string/ride_time"
                            android:longClickable="false"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TaxiTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/startLocation"
                        style="@style/TaxiTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_baseline_person_pin_circle_24px"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24px"
                        android:focusable="false"
                        android:hint="@string/start_location"
                        android:longClickable="false"
                        android:singleLine="true"
                         />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TaxiTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/endLocation"
                        style="@style/TaxiTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_baseline_place_24px"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24px"
                        android:focusable="false"
                        android:hint="@string/end_location"
                        android:longClickable="false"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TaxiTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="Your comments for the Driver.">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/comments"
                        style="@style/TaxiTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_comment_24px"
                        android:hint="@string/comments"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/submitButton"
                        style="@style/TaxiButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="Submit" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
